[package]
name = "sgip-ev-charging"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"
description = "An EV charging algorithm that optimizes charging relative to real-time and forecast marginal emissions data"
keywords = ["california", "sgip", "ev", "tesla", "emissions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.11"
anyhow = "1"
serde_json = "1"
tokio = { version = "1.3", features = ["full"] }
tracing-subscriber = "0.2"
structopt = "0.3"
csv = "1.1"
chrono-tz = { version = "0.5", features = ["serde"] }
hdrhistogram = "7"
sgip-signal = "0.1.1"
toml = "0.5"
